--- a/docs/src/main/asciidoc/mongodb-panache.adoc
+++ b/docs/src/main/asciidoc/mongodb-panache.adoc
@@ -225,6 +225,9 @@ Person.deleteAll();
 
 // delete by id
 boolean deleted = Person.deleteById(personId);
+
+// set the name of all living persons to 'Mortal'
+long updated = Person.update("name", "Mortal").where("status", Status.Alive);
 ----
 
 All `list` methods have equivalent `stream` versions.
@@ -388,6 +391,9 @@ personRepository.deleteAll();
 
 // delete by id
 boolean deleted = personRepository.deleteById(personId);
+
+// set the name of all living persons to 'Mortal'
+long updated = personRepository.update("name", "Mortal").where("status", Status.Alive);
 ----
 
 All `list` methods have equivalent `stream` versions.
@@ -495,7 +501,7 @@ MongoDB with Panache will then map it to a MongoDB native query.
 
 If your query does not start with `{`, we will consider it a PanacheQL query:
 
-- `<singlePropertyName>` (and single parameter) which will expand to `{'singleColumnName': '?'}`
+- `<singlePropertyName>` (and single parameter) which will expand to `{'singleColumnName': '?1'}`
 - `<query>` will expand to `{<query>}` where we will map the PanacheQL query to MongoDB native query form. We support the following operators that will be mapped to the corresponding MongoDB operators: 'and', 'or' ( mixing 'and' and 'or' is not currently supported), '=', '>', '>=', '<', '<=', '!=', 'is null', 'is not null', and 'like' that is mapped to the MongoDB `$regex` operator.
 
 Here are some query examples:
@@ -510,6 +516,17 @@ link:https://docs.mongodb.com/manual/reference/bson-types/#document-bson-type-da
 The MongoDB POJO codec doesn't support `ZonedDateTime` and `OffsetDateTime` so you should convert them prior usage.
 
 MongoDB with Panache also supports extended MongoDB queries by providing a `Document` query, this is supported by the find/list/stream/count/delete methods.
+
+MongoDB with Panache offers operations to update multiple documents based on an update document and a query :
+`Person.update("foo = ?1, bar = ?2", fooName, barName).where("name = ?1", name)`.
+
+For these operations, you can express the update document the same way you express your queries, here are some examples:
+
+- `<singlePropertyName>` (and single parameter) which will expand to the update document `{'$set' : {'singleColumnName': '?1'}}`
+- `firstname = ?1, status = ?2` will be mapped to the update document `{'$set' : {'firstname': ?1, 'status': ?2}}`
+- `firstname = :firstname, status = :status` will be mapped to the update document `{'$set' : {'firstname': :firstname, 'status': :status}}`
+- `{'firstname' : ?1, 'status' : ?2}` will be mapped to the update document `{'$set' : {'firstname': ?1, 'status': ?2}}`
+- `{'firstname' : firstname, 'status' : :status}` ` will be mapped to the update document `{'$set' : {'firstname': :firstname, 'status': :status}}`
 
 === Query parameters
 
@@ -809,6 +826,9 @@ deleteCount = ReactivePerson.deleteAll();
 
 // delete by id
 Uni<Boolean> deleted = ReactivePerson.deleteById(personId);
+
+// set the name of all living persons to 'Mortal'
+Uni<Long> updated = ReactivePerson.update("name", "Mortal").where("status", Status.Alive);
 ----
 
 TIP: If you use MongoDB with Panache in conjunction with RESTEasy, you can directly return a reactive type inside your JAX-RS resource endpoint as long as you include the `quarkus-resteasy-mutiny` extension.
